--- a/src/components/InfoPanel/InfoPanel.css
+++ b/src/components/InfoPanel/InfoPanel.css
@@ -14,3 +14,18 @@
   display: flex;
   justify-content: center;
 }
+
+.Contribute-button {
+  width: 100%;
+  overflow: auto;
+  margin: 10px;
+  margin-bottom: 15px;
+  border: none;
+  border-radius: 15px;
+  padding: 20px;
+  box-shadow: 15px 15px 15px black;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
