--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,36 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 12vh;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
+  overflow: auto;
+  padding: 20px;
+  column-gap: 20px;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-style: italic;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.App-body {
+  background-image: url("./assets/Rye_ripe.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  min-height: 88vh;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App-footer {
+  background-color: #282c34;
+  min-height: 8vh;
+  color: #858585;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 30px;
 }
